# lingoro-bot

./: .dockerignore  .env.example  .gitignore  1database.db  Dockerfile  README.md  bot.py  config.py  data.json  database.db  exceptions.py  logging_config.py  messages.py  pyproject.toml  render.yaml  requirements.txt  text_data.py
db/: crud.py  database.py  models.py
docs/: bot_flowchart.drawio  rules_and_validations.md
lingoro_bot/: bot.py
lingoro_bot/custom_types/: vocab_types.py
lingoro_bot/db/: crud.py  database.py  models.py
lingoro_bot/filters/: allowed_chars_filter.py  base_filter.py  check_empty_filters.py  length_filter.py
lingoro_bot/handlers/: __init__.py  create_vocab.py  help.py  menu.py  vocab_base.py  vocab_trainer.py
lingoro_bot/keyboards/: menu_kb.py
lingoro_bot/tools/: fsm_utils.py  vocab_trainer_utils.py  vocab_utils.py  wordpair_utils.py
lingoro_bot/validators/: base_validator.py
lingoro_bot/validators/vocab/: vocab_description_validator.py  vocab_name_validator.py
lingoro_bot/validators/wordpair/: component_validator.py  item_validator.py  wordpair_validator.py
qx3learn_bot/: bot.py  config.py  text_data.py  types.py
qx3learn_bot/custom_types/: vocab_types.py  wordpair_types.py
qx3learn_bot/db/: crud.py  database.py
qx3learn_bot/filters/: allowed_chars_filter.py  check_empty_filters.py  length_filter.py
qx3learn_bot/handlers/: create_vocab.py  vocab_base.py
qx3learn_bot/keyboards/: create_vocab_kb.py
qx3learn_bot/tools/: vocab_utils.py  wordpair_utils.py
qx3learn_bot/validators/vocab/: vocab_description_validator.py  vocab_name_validator.py
qx3learn_bot/validators/wordpair/: component_validator.py  item_validator.py  wordpair_validator.py
src/filters/: allowed_chars_filter.py  check_empty_filters.py  count_filter.py  length_filter.py  not_empty_filters.py  valid_length_filter.py
src/fsm/: states.py
src/handlers/: __init__.py  callback_data.py  create_vocab.py  dict_base.py  help.py  menu.py  vocab_base.py  vocab_trainer.py  word_trainer.py
src/keyboards/: create_vocab_kb.py  dict_base_kb.py  help_kb.py  menu_kb.py  pagination_kb.py  vocab_base_kb.py  vocab_selection_kb.py  vocab_trainer_kb.py
src/validators/: base_validator.py  create_vocab_validators.py  validators.py  vocab_name_validator.py  vocab_note_validator.py  wordpair_validator.py
src/validators/vocab/: vocab_description_validator.py  vocab_name_validator.py  vocab_note_validator.py
src/validators/wordpair/: annotation_validator.py  component_validator.py  item_validator.py  translation_validator.py  word_validator.py  wordpair_validator.py
tests/: database.db
tests/aiogram_bot_example/: run_bot.py  run_check.py
tests/aiogram_bot_example/core/callback_data/: __init__.py  tender.py
tests/aiogram_bot_example/core/filters/: __init__.py  chat.py
tests/aiogram_bot_example/core/handlers/: __init__.py  user.py
tests/aiogram_bot_example/core/keyboards/: __init__.py  tender.py
tests/aiogram_bot_example/utils/: __init__.py  db_naming_columns.py  other_tender.py  set_bot_commands.py
tests/aiogram_bot_example/utils/db/: __init__.py  tender.py
tests/aiogram_bot_example/utils/templates/: __init__.py  tender.py
tests/aiogram_bot_example/utils/tender/: tender_view.py
tests/aiogram_bot_example/utils/tender/parse/: __init__.py  base_lav.py  lav223.py  lav44.py
tests/aiogram_bot_example/utils/types/: __init__.py  base.py  tender.py
tests/help/: Project Plan.docx  ~$oject Plan.docx
tests/models/: app.py  config.py  main.py  models.py  test.db
tests/modules/: checks.py  separators.py  utils.py
tests/ТЗ/: Клавиатура:Команды.docx  ТЗ.docx
tools/: escape_markdown.py  fsm_utils.py  message_formatter.py  read_data.py  training_utils.py  vocab_trainer_utils.py  vocab_utils.py  wordpair_utils.py
tools/wordpair/: split_wordpairs.py
